--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 		<header>
 			<div class="caixa">
-				<h1><img src="../Projeto SAC/img/logo.jpeg"></h1>
+				<h1><img src="../img/logo.jpeg"></h1>
 
 				<nav>
 					<ul>
@@ -33,7 +33,7 @@
 
         <section class="showcase">
             <video class="video" autoplay loop muted allow="fullscreen">
-                <source src="../Projeto SAC/img/video-slideshow.mp4" type="video/mp4"> 
+                <source src="../img/video-slideshow.mp4" type="video/mp4"> 
             </video>
         <div class="overlay"></div>
         <div class="texto__video">
@@ -52,12 +52,12 @@
             <p class="texto__sobre">Além disso o queijo deve seguir Regulamento Técnico de Identidade e qualidade (RTIQ) que tem como objetivo fixar a identidade e as características mínimas que o produto deverá apresentar, incluindo denominação de venda e dizeres na rotulagem.</p>
             </div>
             <div class="caixa__imagem--rotulo">
-                <img class="imagem__rotulo" src="../Projeto SAC/img/rotulo-frente.jpeg">
+                <img class="imagem__rotulo" src="../img/rotulo-frente.jpeg">
             </div>
         </div>
 
         <div class="caixa__slide">
-            <img src="../Projeto SAC/img/imagem-slide.jpg" alt="Foto de fazenda com vacas" class="imagem__fazenda">
+            <img src="..img/imagem-slide.jpg" alt="Foto de fazenda com vacas" class="imagem__fazenda">
             <div class="caixa__texto--slide">
                 <h2 class="texto__slide">A Uai Minas nasceu em Minas Gerais, no ano de 2022. Conheça nossa fazenda.</h2>
                 </div>
@@ -65,7 +65,7 @@
 
             <div class="layout">
                 <h2>Uma visão panorâmica pela nossa fábrica</h2>
-                <img class="layout__imagem" src="../Projeto SAC/img/layout.png" alt="Planta da fábrica">
+                <img class="layout__imagem" src="../img/layout.png" alt="Planta da fábrica">
             </div>
 
             <div class="mapa">
@@ -74,7 +74,7 @@
             </div>
 
             <footer>
-                <img src="../Projeto SAC/img/logo.jpeg">
+                <img src="../img/logo.jpeg">
                 <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
                 <p class="copyright">CNPJ: 11.111.111/0001-11</p>
             </footer>
