--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="../Projeto SAC/img/logo.jpeg"></h1>
+            <h1><img src="../img/logo.jpeg"></h1>
 
             <nav>
                 <ul>
@@ -32,7 +32,7 @@
     </header>
 
     <div class="caixa__banner">
-        <img src="../Projeto SAC/img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
+        <img src="../img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
     </div>
 
     <div class="caixa__texto">
@@ -116,7 +116,7 @@
     </form>
 
     <footer>
-        <img src="../Projeto SAC/img/logo.jpeg">
+        <img src="../img/logo.jpeg">
         <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
         <p class="copyright">CNPJ: 11.111.111/0001-11</p>
     </footer>
