--- a/produtos.html
+++ b/produtos.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="../Projeto SAC/img/logo.jpeg"></h1>
+            <h1><img src="../img/logo.jpeg"></h1>
 
             <nav>
                 <ul>
@@ -32,12 +32,12 @@
     </header>
 
     <div class="caixa__produtos"><a href="https://ibb.co/Qr2txJv">
-        <img src="../Projeto SAC/img/rotulo-tras.png" alt="Queijo Uai Minas">
+        <img src="../img/rotulo-tras.png" alt="Queijo Uai Minas">
         <h3>Queijo Minas Frescal</h3>
     </a></div>
 
     <footer>
-        <img src="../Projeto SAC/img/logo.jpeg">
+        <img src="../img/logo.jpeg">
         <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
         <p class="copyright">CNPJ: 11.111.111/0001-11</p>
     </footer>
