--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="caixa__banner">
-        <img src="../img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
+        <img src="/UaiMinas/img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
     </div>
 
     <div class="caixa__texto">
@@ -116,7 +116,7 @@
     </form>
 
     <footer>
-        <img src="../img/logo.jpeg">
+        <img src="/UaiMinas/img/logo.jpeg">
         <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
         <p class="copyright">CNPJ: 11.111.111/0001-11</p>
     </footer>
