--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="C:\Users\ricar\OneDrive\Área de Trabalho\Alura\Projeto SAC\reset.css">
-        <link rel="stylesheet" href="C:\Users\ricar\OneDrive\Área de Trabalho\Alura\Projeto SAC\style.css">
+        <link rel="stylesheet" href="/UaiMinas/reset.css">
+        <link rel="stylesheet" href="/UaiMinas/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
