--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="../img/logo.jpeg"></h1>
+            <h1><img src="/UaiMinas/img/logo.jpeg"></h1>
 
             <nav>
                 <ul>
