--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<li><a href="index.html">Página incial</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
 						<li><a href="contato.html">Ajuda</a></li>
+                        <li><a href="contato.html">Sobre</a></li>
 					</ul>
 				</nav>
 			</div>
