--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/UaiMinas/reset.css">
-        <link rel="stylesheet" href="/UaiMinas/style.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -19,11 +19,11 @@
     <body>
 		<header>
 			<div class="caixa">
-				<h1><img src="/UaiMinas/img/logo.jpeg"></h1>
+				<h1><img src="img/logo.jpeg"></h1>
 
 				<nav>
 					<ul>
-						<li><a href="index.html">Página incial</a></li>
+						<li><a href="index.html">Página inicial</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
 						<li><a href="contato.html">Ajuda</a></li>
 					</ul>
@@ -33,7 +33,7 @@
 
         <section class="showcase">
             <video class="video" autoplay loop muted allow="fullscreen">
-                <source src="/UaiMinas/img/video-slideshow.mp4" type="video/mp4"> 
+                <source src="img/video-slideshow.mp4" type="video/mp4"> 
             </video>
         <div class="overlay"></div>
         <div class="texto__video">
@@ -52,12 +52,12 @@
             <p class="texto__sobre">Além disso o queijo deve seguir Regulamento Técnico de Identidade e qualidade (RTIQ) que tem como objetivo fixar a identidade e as características mínimas que o produto deverá apresentar, incluindo denominação de venda e dizeres na rotulagem.</p>
             </div>
             <div class="caixa__imagem--rotulo">
-                <img class="imagem__rotulo" src="/UaiMinas/img/rotulo-frente.jpeg">
+                <img class="imagem__rotulo" src="img/rotulo-frente.jpeg">
             </div>
         </div>
 
         <div class="caixa__slide">
-            <img src="/UaiMinas/img/imagem-slide.jpg" alt="Foto de fazenda com vacas" class="imagem__fazenda">
+            <img src="img/imagem-slide.jpg" alt="Foto de fazenda com vacas" class="imagem__fazenda">
             <div class="caixa__texto--slide">
                 <h2 class="texto__slide">A Uai Minas nasceu em Minas Gerais, no ano de 2022. Conheça nossa fazenda.</h2>
                 </div>
@@ -65,7 +65,7 @@
 
             <div class="layout">
                 <h2>Uma visão panorâmica pela nossa fábrica</h2>
-                <img class="layout__imagem" src="/UaiMinas/img/layout.png" alt="Planta da fábrica">
+                <img class="layout__imagem" src="img/layout.png" alt="Planta da fábrica">
             </div>
 
             <div class="mapa">
@@ -74,7 +74,7 @@
             </div>
 
             <footer>
-                <img src="/UaiMinas/img/logo.jpeg">
+                <img src="img/logo.jpeg">
                 <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
                 <p class="copyright">CNPJ: 11.111.111/0001-11</p>
             </footer>
