--- a/contato.html
+++ b/contato.html
@@ -19,11 +19,11 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="/UaiMinas/img/logo.jpeg"></h1>
+            <h1><img src="img/logo.jpeg"></h1>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Página incial</a></li>
+                    <li><a href="index.html">Página inicial</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="contato.html">Ajuda</a></li>
                 </ul>
@@ -32,7 +32,7 @@
     </header>
 
     <div class="caixa__banner">
-        <img src="/UaiMinas/img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
+        <img src="img/customer-service.png" alt="Atendentes da Uai Minas" class="caixa__banner--imagem">
     </div>
 
     <div class="caixa__texto">
@@ -116,7 +116,7 @@
     </form>
 
     <footer>
-        <img src="/UaiMinas/img/logo.jpeg">
+        <img src="img/logo.jpeg">
         <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
         <p class="copyright">CNPJ: 11.111.111/0001-11</p>
     </footer>
