--- a/produtos.html
+++ b/produtos.html
@@ -19,11 +19,11 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="/UaiMinas/img/logo.jpeg"></h1>
+            <h1><img src="img/logo.jpeg"></h1>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Página incial</a></li>
+                    <li><a href="index.html">Página inicial</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="contato.html">Ajuda</a></li>
                 </ul>
@@ -32,12 +32,12 @@
     </header>
 
     <div class="caixa__produtos"><a href="https://ibb.co/Qr2txJv">
-        <img src="/UaiMinas/img/rotulo-tras.png" alt="Queijo Uai Minas">
+        <img src="img/rotulo-tras.png" alt="Queijo Uai Minas">
         <h3>Queijo Minas Frescal</h3>
     </a></div>
 
     <footer>
-        <img src="/UaiMinas/img/logo.jpeg">
+        <img src="img/logo.jpeg">
         <p class="copyright">Copyright &copy; Uai Minas - 2022. Todos os direitos reservados.</p>
         <p class="copyright">CNPJ: 11.111.111/0001-11</p>
     </footer>
